--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Hobbies</title>
-  <link rel="stylesheet" href="/Users/jesslynperdana/Desktop/Web Development/HTML - Personal Site/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
