--- a/contact me.html
+++ b/contact me.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
-  <link rel="stylesheet" href="/cv/css/styles.css">
+  <link rel="stylesheet" href="cv/styles.css">
 </head>
 
 <body>
