--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Hobbies</title>
-  <link rel="stylesheet" href="cv/styles.css">
+  <link rel=“stylesheet” type=“text/css” href=“styles.css”>
 </head>
 
 <body>
