--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Jesslyn's Personal Site</title>
-  <link rel=“stylesheet” type=“text/css” href=“styles.css”>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
