--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
   <h3>Skills</h3>
   <table cellspacing="10">
     <tr>
-      <td>JavaScript</td>
-      <td>NA</td>
+      <td>Bootstrap</td>
+      <td>⭐️⭐️⭐️⭐️</td>
     </tr>
     <tr>
       <td>CSS</td>
-      <td>⭐️</td>
+      <td>⭐️⭐️⭐️⭐️</td>
     </tr>
     <tr>
       <td>HTML</td>
-      <td>⭐️⭐️⭐️</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
     </tr>
     <tr>
-      <td>Python</td>
-      <td>NA</td>
+      <td>JavaScript</td>
+      <td>⭐️⭐️</td>
     </tr>
   </table>
   <hr>
